--- a/services/backend/composer.json
+++ b/services/backend/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "~1.0",
+		"drupal/core": "9.1.x",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
